fix: remove invalid z-index value from project details controls

--- a/src/features/projectsV2/ProjectsMap/ProjectsMap.module.scss
+++ b/src/features/projectsV2/ProjectsMap/ProjectsMap.module.scss
@@ -19,7 +19,6 @@
   top: 101px;
   gap: 5px;
   right: 10px;
-  z-index: 2px;
 
   &.embedModeMobile {
     top: 24px;
